--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["TQ Hirsch <thequux@thequux.com>"]
 
 description = "CD+G parser"
-repository = "https://github.com/thequux/qaraoke"
+repository = "https://github.com/cdg-rs/cdg"
 license = "ISC"
 
 keywords = ["cdg", "karaoke"]
